@@ -27,7 +27,7 @@ public enum ProductErrorCode {
     private final HttpStatus httpStatus;
 
     public String getMessageWithDetails(Object... args) {
-        return String.format("%s (현재값: %s)", message, formatArgs(args));
+        return "%s (현재값: %s)".formatted(message, formatArgs(args));
     }
 
     private String formatArgs(Object... args) {
